Fix overflow e indexing navbar

--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -136,6 +136,7 @@ body,html {
   flex: 1;
   border: 1px ;
   height: 100%;
+  overflow: auto;
 }
   
 .title-scoreboard {
